--- a/action.yml
+++ b/action.yml
@@ -3,10 +3,6 @@ name: 'JSON Schema Validator'
 description: 'Validates JSON files against schemas'
 author: tingold
 inputs:
-  dir:  # id of input
-    description: 'directory to run in'
-    required: true
-    default: '.'
   failFast:
     description: 'whether to continue after first failure'
     required: false
@@ -20,4 +16,4 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - -dir=${{ inputs.dir }}
+    - -dir=${{ env.working_directory }}
